# Housework2.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: bitable_client.py  chore_service.py  config.py  event_handler.py  feishu_client.py  llm_parser.py  main.py  reminder_scheduler.py  reminder_service.py  schemas.py  settlement_period.py  settlement_scheduler.py  settlement_service.py  time_utils.py
scripts/: check_bitable_schema.py  run.py  run_settlement_once.py  start_feishu_ws.py  test_bitable_client_reminder.py  test_bitable_time_fields.py  test_bitable_write.py  test_chore_flow.py  test_event_handler_reminder_routing.py  test_llm_parser.py  test_llm_parser_reminder.py  test_reminder_scheduler.py  test_reminder_service.py  test_time_utils.py
