[project]
name = "housework-feishu-bot"
version = "0.2.0"
description = "飞书家务积分机器人 — 用 LLM 解析家务消息，双周积分结算，飞书卡片推送"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "lark-oapi>=1.6.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8020"

[tool.ruff]
line-length = 100
target-version = "py311"
